<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".c.ui.AddMeeting">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/create_meeting">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:orientation="vertical"
        >


        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_arrow_back" />


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/subject"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="Subject" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_add_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Email participants 3 max"
                android:inputType="textEmailAddress"/>

        </com.google.android.material.textfield.TextInputLayout>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">



        </LinearLayout>

        <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Les dates disponible :"

            />


        <Button
        android:id="@+id/btn_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Date" />

        <Button
            android:id="@+id/btn_Time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Time"/>
</LinearLayout>



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="Réunion le : " />

            <TextView
                android:id="@+id/dateOfMeeting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="79dp"
                android:layout_marginLeft="79dp"
                android:layout_marginTop="2dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="86dp"
                android:layout_marginRight="86dp"
                android:text="   A :  " />

            <TextView
                android:id="@+id/timeOfMeeting"
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="11dp"
                android:layout_marginRight="11dp" />

        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <TextView
                android:id="@+id/Rooms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="Numero de la salle :  " />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinnerSalle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scrollbars="horizontal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <Button
                android:id="@+id/btn_add_meeting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ADD MEETING" />


            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="CANCEL" />

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>